tests/valid/module_test/some_module.nm
component R {
    prefix = "R";
    footprint = "resistor";

    pin A: passive = 1;
    pin B: passive = 2;
}
