tests/errors/duplicate_prefix.nm
component Foo {
    prefix = "U";
    prefix = "J";
}